# ttimes

./: .gitignore  GtfsToSqlite.hs  Main.hs  elm.json  make-frontend.sh  mbta_gtfs.sql  queries.sql  ttimes.cabal
content/: index.css  index.html  index.js  index2.js  manifest.json
data/: all-unique-trips.json  connecting-stops-last-modified.txt  connecting-stops.json  routes-last-modified.txt  routes.json  stop-connecting-routes.json  stop-coords-snapped.json  stop-coords.json  stop-routes.json  stops-last-modified.txt
data/polygons/: README.md  arlington-1.json  arlington-2.json  boston-1.json  boston-10.json  boston-11.json  boston-12.json  boston-13.json  boston-14.json  boston-15.json  boston-16.json  boston-17.json  boston-18.json  boston-19.json  boston-2.json  boston-20.json  boston-21.json  boston-22.json  boston-23.json  boston-24.json  boston-25.json  boston-26.json  boston-27.json  boston-3.json  boston-4.json  boston-5.json  boston-6.json  boston-7.json  boston-8.json  boston-9.json  brookline-1.json  cambridge-1.json  cambridge-2.json  cambridge-3.json  cambridge-4.json  cambridge-5.json  malden-1.json  medford-1.json  medford-2.json  medford-3.json  (+6 more)
frontend/: Main.elm
frontend/Ttimes/: Ports.elm
