cabal-version: 3.0

name: ttimes
version: 0

executable ttimes
  build-depends:
    aeson,
    aeson-pretty,
    base,
    bytestring,
    containers,
    cretheus,
    http-client,
    http-client-tls,
    http-types,
    text,
  default-language: GHC2024
  ghc-options: -Wall
  main-is: Main.hs

executable gtfs2sqlite
  build-depends:
    aeson,
    aeson-pretty,
    base,
    bytestring,
    cassava,
    containers,
    cretheus,
    cryptohash-md5,
    direct-sqlite,
    neat-interpolation,
    text,
  default-extensions:
    BlockArguments
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes
  default-language: GHC2024
  ghc-options: -Wall
  main-is: GtfsToSqlite.hs
